Remove jvmArgs that were acting as a powermock issue workaround